# SOA_RastradorWeb

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
actor/: CMakeLists.txt
actor/include/: ActorManager.h  Delegate.h  Mailbox.h  actor.h  actors_global.h
actor/src/: ActorManager.cpp  ActorThead.cpp  ActorThead.h  Delegate.cpp  Delegate.h  Mailbox.h  actor.cpp
actor/test/: CMakeLists.txt  TestActor.h  test_actor.cpp  test_actor.h
include/: README.md
include/actor/: ActoManager.h
indexing-service/: CMakeLists.txt
indexing-service/include/: CrawServer.h  CrawlServer.h  CurlFetcher.h  Curlflecher.h  HttpGetter.h  LinkChecker.h  linkChecker.h
indexing-service/src/: CrawServer.cpp  CrawlServer.cpp  CurlFetcher.cpp  Curlflecher.cpp  HttpGetter.cpp  LinkChecker.cpp  linkChecker.cpp  main.cpp
lib/actor/: CMakeLists.txt  README.md
lib/actor/include/: ActorManager.h  actor.h  mailbox.h
lib/actor/src/: ActorManager.cpp  actor.cpp
lib/actor/test/: CMakeLists.txt  TestActor.cpp  TestActor.h  test_actor.cpp  test_actor.h  test_actormanager.cpp
src/: main.cpp
src/actor/: ActorManager.cpp  actor.cpp
test/: CMakeLists.txt  README.md  TestActor.h  testActores.cpp  test_actor.cpp  test_actormanager.cpp
